--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ body {
 }
 
 .swiper {
+    z-index: 0;
     width: 100%;
     height: 100%;
 }
@@ -40,18 +41,18 @@ body {
     object-fit: cover;
 }
 
-.swiper-button-prev{
+.swiper-button-prev {
     display: none;
 }
 
-.swiper-button-next{
+.swiper-button-next {
     display: none;
 }
 
-.swiper-pagination-bullet{
+.swiper-pagination-bullet {
     background-color: #A4A4A4;
 }
 
-.swiper-pagination-bullet-active{
+.swiper-pagination-bullet-active {
     background-color: #3253FF;
 }
