feat: 호버 스타일 삭제 추가

--- a/src/pages/createMeeting/components/useFunnel/SetDates.css
+++ b/src/pages/createMeeting/components/useFunnel/SetDates.css
@@ -158,6 +158,7 @@
   height: 4rem;
   /*날짜*/
   padding: 2.5rem 2.5rem;
+  pointer-events: none !important;
 }
 .rmdp-day span {
   font-weight: 400;
@@ -168,6 +169,7 @@
   line-height: 2rem;
   letter-spacing: -0.16px;
   text-align: center;
+  pointer-events: none !important;
 }
 
 .rmdp-week-day {
