--- a/src/App.css
+++ b/src/App.css
@@ -1,58 +1,57 @@
 #app {
-    height: 100%;
+  height: 100%;
 }
 
 html,
 body {
-    position: relative;
-    height: 100%;
+  position: relative;
+  height: 100%;
 }
 
 body {
-    margin: 0;
-    background: #eee;
-    padding: 0;
-    color: #000;
-    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-    font-size: 14px;
+  margin: 0;
+  padding: 0;
+  color: #000;
+  font-size: 14px;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  background: #eee;
 }
 
 .swiper {
-    z-index: 0;
-    width: 100%;
-    height: 100%;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .swiper-slide {
-
-    /* Center slide text vertically */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #141414;
-    text-align: center;
-    font-size: 18px;
+  /* Center slide text vertically */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  text-align: center;
+  background: #141414;
 }
 
 .swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .swiper-button-prev {
-    display: none;
+  display: none;
 }
 
 .swiper-button-next {
-    display: none;
+  display: none;
 }
 
 .swiper-pagination-bullet {
-    background-color: #A4A4A4;
+  background-color: #a4a4a4 !important;
 }
 
 .swiper-pagination-bullet-active {
-    background-color: #3253FF;
+  background-color: #3253ff !important;
 }
