design: 주말 날짜 아래 흰색 선 제거

--- a/src/pages/createMeeting/components/useFunnel/SetDates.css
+++ b/src/pages/createMeeting/components/useFunnel/SetDates.css
@@ -43,7 +43,7 @@
 
 .rmdp-day-picker > div > div:first-child {
   margin-bottom: 0.7rem;
-  border-bottom: 0.5px solid white;
+  /* border-bottom: 0.5px solid white; */
 }
 
 /* .rmdp-week {
