design: 달력 년-월 형식 변경

--- a/src/pages/createMeeting/components/useFunnel/SetDates.css
+++ b/src/pages/createMeeting/components/useFunnel/SetDates.css
@@ -197,3 +197,7 @@
 .rmdp-day.rmdp-disabled.rmdp-deactive {
   color: var(--rmdp-grey10) !important;
 }
+
+.rmdp-header-values.rmdp-header-values span {
+  padding: 0px;
+}
